# GimpResourcesThumbnailer

./: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.cmake  HACKING  PKGBUILD  PKGBUILD.cmake  README  TODO
pkgs/: CMakeLists.txt
pkgs/archlinux/: PKGBUILD  PKGBUILD.cmake
src/: CMakeLists.txt  abrbrushgenerator.cpp  abrbrushgenerator.h  abrbrushloader.cpp  abrbrushloader.h  gbrbrushgenerator.cpp  gbrbrushgenerator.h  gbrbrushloader.cpp  gbrbrushloader.h  gihbrushgenerator.cpp  gihbrushgenerator.h  gihbrushloader.cpp  gihbrushloader.h  gimpbrushcreator.cpp  gimpbrushcreator.h  gimpbrushthumbnail.desktop  gimpresourcesthumbnail.desktop  patternloader.cpp  patternloader.h  resourceloader.cpp  thumbnailcreator.cpp  thumbnailcreator.h  vbrbrushgenerator.cpp  vbrbrushgenerator.h  vbrbrushloader.cpp  vbrbrushloader.h  vbrgenerator.cpp  vbrgenerator.h  x-adobe-photoshop-brush.xml  x-gimp-brush-animated.xml  x-gimp-brush-thumbnailer.xml  x-gimp-gradient.xml  x-gimp-palette.xml  x-gimp-pattern.xml  x-gimpgbr.xml
src/loaders/: abrbrushloader.cpp  abrbrushloader.h  gbrbrushloader.cpp  gbrbrushloader.h  gihbrushloader.cpp  gihbrushloader.h  gradientloader.cpp  gradientloader.h  paletteloader.cpp  paletteloader.h  patternloader.cpp  patternloader.h  resourceloader.cpp  resourceloader.h  vbrbrushloader.cpp  vbrbrushloader.h
src/loaders/AdobePhotoshop/: abrbrushloader.cpp  abrbrushloader.h
src/loaders/Gimp/: gbrbrushloader.cpp  gbrbrushloader.h  gihbrushloader.cpp  gihbrushloader.h  gradientloader.h  patternloader.cpp  patternloader.h  vbrbrushloader.cpp
src/tests/: CMakeLists.txt  brushloadertest.cpp  brushloadertest.h  gimpbrushloadertest.cpp  gimpbrushloadertest.h  gradientloadertest.cpp  gradientloadertest.h  paletteloadertest.cpp  paletteloadertest.h  resourceloadertest.cpp  resourceloadertest.h  vbrbrushloadertest.cpp  vbrbrushloadertest.h
src/tests/abr/: Nagel_RBS_Series1.abr  gorjussHAIRpack01.abr
src/tests/gbr/: colored.gbr  feather.gbr  fraktle3.gbr
src/tests/pat/: lala_gray.pat  lala_gray_alpha.pat  lala_rgb.pat  lala_rgba.pat
src/tests/vbr/: Circle-Fuzzy-(59).vbr  LALA.vbr
